# astorAI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
contracts/: astor-engine-contract.v1.yaml  astor-protocol-ingest.v1.yaml
data/: sample_supplier_cn.csv
data/eval/: gold.csv  products.csv
docs/: ARCHITECTURE.md  protocol-sourcing-handoff.md
docs/superpowers/plans/: 2026-06-28-m1-ops-web-app.md
docs/superpowers/specs/: 2026-06-28-web-app-m1-ops-frontend-design.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_protocols.py
scripts/: ingest_catalog.py  ingest_protocols.py  ingest_shopify.py  probe_protocols_io.py  run_eval.py
src/astor/: config.py
src/astor/api/: __init__.py  deps.py  main.py  repo.py  roles.py  schemas.py  seed.py  skus.py
src/astor/api/routers/: catalog.py  dashboard.py  (+1 more)
src/astor/catalog/: embeddings.py  extraction.py  ingestion.py  matcher.py  normalization.py  schemas.py  scoring.py  shopify_source.py  vectorize.py
src/astor/db/: base.py  models.py
src/astor/eval/: accuracy.py
src/astor/pricing/: landed_cost.py
src/astor/protocols/: __init__.py  extraction.py  filtering.py  ingestion.py  persistence.py  schemas.py  sources.py
tests/: test_eval.py  test_logic.py  test_protocol_extraction.py  test_protocols.py  test_shopify_mapping.py
tests/api/: test_catalog.py  test_dashboard.py  test_health.py  test_ingest.py  test_integration_smoke.py  test_pricing.py  test_roles.py  test_schemas.py  test_skus.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(shell)/: layout.tsx  page.tsx
web/components/: ConfidenceBar.tsx  DemoBanner.tsx  EquivalentsPanel.tsx  IngestForm.tsx  KindBadge.tsx  KpiCard.tsx  LandedCostPanel.tsx  LandedCostWaterfall.tsx  OffersTable.tsx  ProductsTable.tsx  Sidebar.tsx
web/components/__tests__/: LandedCostWaterfall.test.tsx
web/lib/: api.ts  types.ts
(+2 files in other folders)
